--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,8 @@
         <item>About Roots</item>
         <item>Get Involved</item>
     </string-array>
+    <string-array name="left_drawer_options_counselor">
+        <item>Logout</item>
+        <item>Settings</item>
+    </string-array>
 </resources>
