--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,12 @@
         <item>Logout</item>
         <item>Settings</item>
     </string-array>
+    <string-array name="right_drawer_options">
+        <!--settings for students?-->
+    </string-array>
+    <string-array name="right_drawer_options_counselor">
+        <item>I am available to talk.</item>
+    </string-array>
 
     <string name="title_activity_counselor_view_messages">CounselorViewMessagesActivity</string>
 
