Connectivity listener, network warning when network disconnected, and Loading splash page runs on Login button click

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,7 +27,7 @@
     <string name="dialog_welcome_student_view_messages_act">Displayed is this counselor\'s bio. You can swipe to the right to hide it.</string>
     <string name="dialog_welcome_counselor">Welcome to Team Roots! Students will message you anonymously. You can tell students you are unavailable to talk to in settings.</string>
     <string name="ok">Ok</string>
-
+    <string name="no_internet_connection">Please check your internet connection and try again.</string>
     <string name="title_activity_counselor_view_messages">CounselorViewMessagesActivity</string>
 
 </resources>
