--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,11 +23,26 @@
         <item>I am available to talk.</item>
     </string-array>
 
+    <string name="c_login"><u>Log in as a Counselor</u></string>
+    <string name="s_login"><u>Log in as a Student</u></string>
+
     <string name="dialog_welcome_student">Welcome to Team Roots! Tap a counselor\'s picture to start a conversation.</string>
     <string name="dialog_welcome_student_view_messages_act">Displayed is this counselor\'s bio. You can swipe to the right to hide it.</string>
     <string name="dialog_welcome_counselor">Welcome to Team Roots! Students will message you anonymously. You can tell students you are unavailable to talk to in settings.</string>
     <string name="ok">Ok</string>
     <string name="no_internet_connection">Please check your internet connection and try again.</string>
     <string name="title_activity_counselor_view_messages">CounselorViewMessagesActivity</string>
+
+    <!-- Strings related to login -->
+    <string name="prompt_email">Email</string>
+    <string name="prompt_password">Password</string>
+    <string name="action_sign_in">Login</string>
+    <string name="invalid_email">This email address is invalid</string>
+    <string name="invalid_password">Password is too short</string>
+    <string name="incorrect_password">Password is incorrect</string>
+    <string name="field_required">This field is required</string>
+    <string name="prompt_username">Username</string>
+    <string name="prompt_id">Student ID</string>
+
 
 </resources>
