--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,7 +24,8 @@
 
     <string name="c_login"><u>Log in as a Counselor</u></string>
     <string name="s_login"><u>Log in as a Student</u></string>
-
+    <string name="get_started_description">Talk to counselors that you know, anonymously.</string>
+    <string name="school_choice_description">What school do you go to?</string>
     <string name="dialog_welcome_student">Welcome to Team Roots! Tap a counselor\'s picture to start a conversation.</string>
     <string name="dialog_welcome_student_view_messages_act">Displayed is this counselor\'s bio. You can swipe to the right to hide it.</string>
     <string name="dialog_welcome_counselor">Welcome to Team Roots! Students will message you anonymously. You can tell students you are unavailable to talk to in settings.</string>
@@ -32,17 +33,23 @@
     <string name="no_internet_connection">Please check your internet connection and try again.</string>
     <string name="feature_not_available_warning">Feature not available in beta test.</string>
     <string name="title_activity_counselor_view_messages">CounselorViewMessagesActivity</string>
+    <string name="call">Call</string>
 
     <!-- Strings related to login -->
     <string name="prompt_email">Email</string>
     <string name="prompt_password">Password</string>
     <string name="action_sign_in">Login</string>
+    <string name="get_started">Get Started</string>
     <string name="invalid_email">This email address is invalid</string>
     <string name="invalid_password">Password is too short</string>
     <string name="incorrect_password">Password is incorrect</string>
     <string name="field_required">This field is required</string>
     <string name="prompt_username">Username</string>
     <string name="prompt_id">Student ID</string>
+    <string name="next">Next</string>
+    <string name="no_school">Don\'t see your school?</string>
+    <string name="student_or_counselor">Are you a student or a counselor?</string>
+    <string name="back">Back</string>
 
 
 </resources>
