--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
 
     <string name="app_name">Roots</string>
     <string name="app_name_roots_counselor">Roots Counselor</string>
+    <string name="conversations">Conversations</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="drawer_open">Navigation drawer opened</string>
